maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:50: error: value Ouest is not a member of object plm.universe.Direction
		setDirection(Direction.Ouest)
                                       ^